[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
qiara = { path = "../qiara", features = ["cpi"] }

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]